utils/local-deployment/limitador-cluster.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: kuadrant-kuadrant-gwapi-gateway-wasm-ratelimits
spec:
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        service: limitador.kuadrant-system.svc.cluster.local
    patch:
      operation: ADD
      value:
        connect_timeout: 1s
        http2_protocol_options: {}
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: rate-limit-cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: limitador.kuadrant-system.svc.cluster.local
                    port_value: 8081
        name: rate-limit-cluster
        type: STRICT_DNS
